# taskybot

./: .gitignore  README.md  pyproject.toml  scrape.py
src/: bot.py  common.py  finetune.py  inference.py
